--- a/app/src/main/res/layout/fragment_booze.xml
+++ b/app/src/main/res/layout/fragment_booze.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/overLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#181111"
@@ -10,154 +11,202 @@
     android:outlineProvider="background"
     android:outlineSpotShadowColor="#FFFFFF">
 
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="25dp"
-        android:contentDescription="Yes"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/_etpgol5vni7a29jfbecupgimi" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="90dp"
-        android:layout_height="31dp"
-        android:layout_marginTop="138dp"
-        android:layout_marginEnd="30dp"
-        android:text="0 ml"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <SeekBar
-        android:id="@+id/seekBar2"
-        android:layout_width="259dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="449dp"
-        android:progressDrawable="@drawable/custom_seekbar"
-        android:thumbTint="@android:color/holo_orange_dark"
-        android:progressTint="@android:color/holo_orange_dark"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <SeekBar
-        android:id="@+id/seekBar5"
-        android:layout_width="259dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="556dp"
-        android:progressDrawable="@drawable/custom_seekbar"
-        android:thumbTint="@android:color/holo_orange_dark"
-        android:progressTint="@android:color/holo_orange_dark"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <SeekBar
-        android:id="@+id/seekBar6"
-        android:layout_width="259dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="128dp"
-        android:progressDrawable="@drawable/custom_seekbar"
-        android:progressTint="@android:color/holo_orange_dark"
-        android:thumbTint="@android:color/holo_orange_dark"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <SeekBar
-        android:id="@+id/seekBar3"
-        android:progressDrawable="@drawable/custom_seekbar"
-        android:thumbTint="@android:color/holo_orange_dark"
-        android:progressTint="@android:color/holo_orange_dark"
-        android:layout_width="259dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="235dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <SeekBar
-        android:id="@+id/seekBar4"
-        android:progressDrawable="@drawable/custom_seekbar"
-        android:thumbTint="@android:color/holo_orange_dark"
-        android:progressTint="@android:color/holo_orange_dark"
-        android:layout_width="259dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="347dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="132dp"
-        android:layout_marginEnd="132dp"
-        android:layout_marginBottom="35dp"
-        android:background="#000000"
-        android:backgroundTint="@color/black"
-        android:backgroundTintMode="add"
-        android:outlineAmbientShadowColor="#FFFFFF"
-        android:outlineProvider="paddedBounds"
-        android:text="Lav min drink"
-        app:iconTint="#FFFFFF"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/underLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:text="Lav min drink" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="90dp"
-        android:layout_height="31dp"
-        android:layout_marginTop="246dp"
-        android:layout_marginEnd="30dp"
-        android:text="0 ml"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="90dp"
+            android:layout_height="31dp"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="138dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="77dp"
+            android:text="0 ml"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/textView3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/seekBar6"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="90dp"
-        android:layout_height="31dp"
-        android:layout_marginTop="358dp"
-        android:layout_marginEnd="30dp"
-        android:text="0 ml"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="90dp"
+            android:layout_height="31dp"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="69dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="77dp"
+            android:text="0 ml"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/textView6"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/seekBar2"
+            app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="90dp"
-        android:layout_height="31dp"
-        android:layout_marginTop="458dp"
-        android:layout_marginEnd="30dp"
-        android:text="0 ml"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <SeekBar
+            android:id="@+id/seekBar4"
+            android:layout_width="259dp"
+            android:layout_height="55dp"
+            android:layout_marginStart="26dp"
+            android:layout_marginTop="56dp"
+            android:layout_marginEnd="6dp"
+            android:layout_marginBottom="47dp"
+            android:progressDrawable="@drawable/custom_seekbar"
+            android:progressTint="@android:color/holo_orange_dark"
+            android:thumbTint="@android:color/holo_orange_dark"
+            app:layout_constraintBottom_toTopOf="@+id/seekBar2"
+            app:layout_constraintEnd_toStartOf="@+id/textView4"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/seekBar3" />
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="90dp"
-        android:layout_height="31dp"
-        android:layout_marginTop="566dp"
-        android:layout_marginEnd="30dp"
-        android:text="0 ml"
-        android:textColor="@color/white"
-        android:textSize="24sp"
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="90dp"
+            android:layout_height="31dp"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="81dp"
+            android:layout_marginEnd="30dp"
+            android:text="0 ml"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/textView5"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/seekBar4"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+        <SeekBar
+            android:id="@+id/seekBar3"
+            android:layout_width="259dp"
+            android:layout_height="56dp"
+            android:layout_marginStart="26dp"
+            android:layout_marginTop="52dp"
+            android:layout_marginEnd="6dp"
+            android:progressDrawable="@drawable/custom_seekbar"
+            android:progressTint="@android:color/holo_orange_dark"
+            android:thumbTint="@android:color/holo_orange_dark"
+            app:layout_constraintBottom_toTopOf="@+id/seekBar4"
+            app:layout_constraintEnd_toStartOf="@+id/textView3"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/seekBar6" />
+
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="25dp"
+            android:contentDescription="Yes"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/_etpgol5vni7a29jfbecupgimi" />
+
+        <SeekBar
+            android:id="@+id/seekBar5"
+            android:layout_width="259dp"
+            android:layout_height="55dp"
+            android:layout_marginStart="27dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="37dp"
+            android:progressDrawable="@drawable/custom_seekbar"
+            android:progressTint="@android:color/holo_orange_dark"
+            android:thumbTint="@android:color/holo_orange_dark"
+            app:layout_constraintBottom_toTopOf="@+id/button"
+            app:layout_constraintEnd_toStartOf="@+id/textView6"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/seekBar2" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="90dp"
+            android:layout_height="31dp"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="77dp"
+            android:layout_marginEnd="30dp"
+            android:text="0 ml"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/seekBar3"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+        <SeekBar
+            android:id="@+id/seekBar2"
+            android:layout_width="259dp"
+            android:layout_height="55dp"
+            android:layout_marginStart="26dp"
+            android:layout_marginEnd="6dp"
+            android:layout_marginBottom="47dp"
+            android:progressDrawable="@drawable/custom_seekbar"
+            android:progressTint="@android:color/holo_orange_dark"
+            android:thumbTint="@android:color/holo_orange_dark"
+            app:layout_constraintBottom_toTopOf="@+id/seekBar5"
+            app:layout_constraintEnd_toStartOf="@+id/textView5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/seekBar4" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="132dp"
+            android:layout_marginEnd="132dp"
+            android:layout_marginBottom="35dp"
+            android:background="#000000"
+            android:backgroundTint="@color/black"
+            android:backgroundTintMode="add"
+            android:outlineAmbientShadowColor="#FFFFFF"
+            android:outlineProvider="paddedBounds"
+            android:text="Lav min drink"
+            app:iconTint="#FFFFFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="Lav min drink" />
+
+        <SeekBar
+            android:id="@+id/seekBar6"
+            android:layout_width="259dp"
+            android:layout_height="55dp"
+            android:layout_marginStart="26dp"
+            android:layout_marginTop="55dp"
+            android:layout_marginEnd="6dp"
+            android:progressDrawable="@drawable/custom_seekbar"
+            android:progressTint="@android:color/holo_orange_dark"
+            android:thumbTint="@android:color/holo_orange_dark"
+            app:layout_constraintEnd_toStartOf="@+id/textView2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="90dp"
+            android:layout_height="31dp"
+            android:layout_marginStart="6dp"
+            android:layout_marginBottom="134dp"
+            android:text="0 ml"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/seekBar5" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <VideoView
+        android:id="@+id/videoView"
+        android:layout_width="411dp"
+        android:layout_height="500px"
+        app:layout_constraintBottom_toTopOf="@+id/underLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/underLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
